tests/errors/preprocessor/011_branch.c.expect
./tests/errors/preprocessor/011_branch.c:1:6: error: identifier expected after #ifdef, #ifndef, #elifdef or #elifndef.
1 | #ifdef
         ^
./tests/errors/preprocessor/011_branch.c:1:6: error: unexpected end-of-file in preprocessor expression
1 | #ifdef
         ^
